# text_to_image_render

./: README.md  main.py  pyproject.toml  spec.json
src/app/: main.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: generation.py
src/app/core/: config.py  container.py
src/app/core/interfaces/: engine_contract.py
src/app/engines/: html_playwright.py  kokoro_engine.py  mermaid_playwright.py
src/app/factories/: engine_factory.py
src/app/schemas/: requests.py
src/app/services/: generator_service.py
tests/integration/: test_html_engine.py
